--- a/views/login.jade
+++ b/views/login.jade
@@ -1,16 +1,17 @@
+
+
 extends layout
 
 block content
-  h2 Log In
-  
-  form(action="/login",method="post")
-    div
-      label Email
-      input(type="text",name="email")
-    
-    div
-      label Password
-      input(type="password",name="password")
-    
-    div
-      input(type="submit",value="Log In")
+
+    h1 Welcome! Please log in
+    p.lead Don't have an account? Register <a href='/register'>here</a>
+    br
+    form(role='form', action="/login",method="post", style='max-width: 300px;')
+      .form-group
+          input.form-control(type='text', name="email", placeholder='Enter Email')
+      .form-group
+        input.form-control(type='password', name="password", placeholder='Password')
+      button.btn.btn-default(type='submit') Submit
+      a(href='/')
+        button.btn.btn-primary(type="button") Cancel      
