--- a/views/register.jade
+++ b/views/register.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
 
-    h1 Register Page
+    h2 Register Page
     p.lead Register your account below
     br
     form(role='form', action="/register",method="post", style='max-width: 300px;')
@@ -13,5 +13,5 @@ block content
       .form-group
         input.form-control(type='password', name="password", placeholder='Password')
       button.btn.btn-default(type='submit') Submit
-      a(href='/')
+      a(href='/login')
         button.btn.btn-primary(type="button") Cancel
