figured out deep populate. changed some routes to account for new discovery and refactored

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,7 +28,9 @@ html
               li
                 a(href="/usergroup/createGroup") create group      
               li
-                a(href="/query") Query Users  
+                a(href="/query") Query Users
+              li
+                a(href="/user/populate/cal") Populate Calendar
 
     .container
       block content
