Partial refactoring to avoid calling and parsing data on almost all requests.

--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -45,6 +45,7 @@ block content
               input(type="text", ng-model="inputUserGroup", required)
               button.btn.btn-primary(ng-disabled="createGroupForm.$invalid", ng-click="createGroup()") Create Group
           #userListWindow(ng-show="selector == 1")
+           h3 {{ selectedUserGroup.name }}
             ul
               li(ng-repeat="user in selectedUserGroup.users")
                 {{ user.name + " " }}
@@ -78,6 +79,7 @@ block content
 
 
           #calendarDetailsWindow(ng-show="selector == 3")
+            h3 {{ selectedCalendar.name }}
             b Owner: 
             |{{ selectedCalendar.owner.name }}
             br
@@ -87,6 +89,7 @@ block content
                 a(href ng-click="displayEventDetails(event)") {{ event.title }}
 
           #calendarOwnerDetailsWindow(ng-show="selector == 5")
+            h3 {{ selectedCalendar.name }}
             b Owner: 
             |{{ selectedCalendar.owner.name }}
             br
