non naive way kinda works. gotta test it

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,5 +24,7 @@ html
               a(href="/query") Query Users
             li
               a(href="/user/populate/cal") Populate Calendar
+            li
+              a(href="/request/create") Create Request
     .container
       block content
