--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -22,14 +22,15 @@ block content
         {{ calendarControl.getTitle() }}
       br
     .row
-      .col-md-9
+      .col-md-8
         mwl-calendar(calendar-events='events', calendar-view='calendarView', calendar-current-day='calendarDay', calendar-control='calendarControl', calendar-event-click='displayEventDetails($event)', calendar-edit-event-click='eventEdited($event)', calendar-delete-event-click='eventDeleted($event)', calendar-auto-open='true')
-      .col-md-3
+      .col-md-4
         #sideBar(ng-controller="sideBarController")
           .btn-group
-            button.btn.btn-primary(ng-class="{active: selector == 0 || selector == 1}", ng-click="displayUserGroups()") User Groups
+            button.btn.btn-primary(ng-class="{active: selector == 0 || selector == 1}", ng-click="displayUserGroups()") Groups
             button.btn.btn-primary(ng-class="{active: selector == 2 || selector == 3 || selector == 5}", ng-click="displayCalendars()") Calendars
             button.btn.btn-primary(ng-class="{active: selector == 4}", ng-click="displayEvents()") Events
+            button.btn.btn-primary(ng-class="{active: selector == 6}", ng-click="displayInvites()") Invites
           #userGroupWindow(ng-show="selector == 0")
             ul
               li(ng-repeat="group in userGroups")
@@ -37,6 +38,7 @@ block content
                 a(href, ng-click="deleteUserGroup(group._id)") [X]
             form(name="createGroupForm")
               input(type="text", ng-model="inputUserGroup", placeholder="User Group Name", required)
+              br
               button.btn.btn-primary(ng-disabled="createGroupForm.$invalid", ng-click="createGroup()") Create Group
             {{ text }}
           #userListWindow(ng-show="selector == 1")
@@ -73,6 +75,7 @@ block content
                 a(href, ng-click="displayCalendar(calendar)") {{ calendar.name }}
             form(name="createCalendarForm")
               input(type="text", ng-model="inputCalendarName", placeholder="Calendar Name", required)
+              br
               button.btn.btn-primary(ng-disabled="createCalendarForm.$invalid", ng-click="createCalendar(inputCalendarName)") Create Calendar
 
 
@@ -142,6 +145,7 @@ block content
               button.btn(ng-click="addModUsertoList()") Add User with Modify
               ul
                 li(ng-repeat="modUserId in modUserList") {{ modUserId }}
+              br
               button.btn.btn-primary(ng-disabled="addModUserForm.$invalid", ng-click="addModUser()") Add Users with Modify
 
           #calendarEvents(ng-show="selector == 4")
@@ -151,7 +155,18 @@ block content
                 a(href, ng-click="displayEventDetails(event)") {{ event.title }}
             br
             a.btn.btn-primary(href, ng-click="createNewEvent()") Create Event
- 
+          
+          #eventInvites(ng-show="selector == 6")
+            ul
+              h4 Sent Invitations
+              li(ng-repeat="request in ownedRequests")
+                //reqest.eventID is an event object, not an ID, naming is due to database storage
+                a(href, ng-click="displayRequestDetails(request)") {{ request.eventID.name }}
+            ul
+              h4 Recieved Invitations
+              li(ng-repeat="request in otherRequests")
+                a(href, ng-click="displayRequestDetails(request)") {{ request.eventID.name }}
+
     script(type="text/ng-template" id="createEventModal.html" )
       .modal-header
         button.close(type='button', ng-click="cancel()") &times;
