--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -243,6 +243,7 @@ block content
           input(type="text", ng-model="selectedEvent._id", ng-hide="true")
           br
           btn.btn.btn-primary(ng-disabled="eventForm.$invalid", ng-click="sendEventData()", data-dismiss='modal') Save
+    
     script(type="text/ng-template" id="eventDetailsModal.html" )
       .modal-header
         button.close(type='button', ng-click="cancel()") &times;
@@ -278,7 +279,12 @@ block content
           button.btn.btn-primary(ng-disabled="!selectedEvent.canEditEvent", ng-click="editSelectedEvent()") Edit Event
           button.btn.btn-danger(ng-disabled="!selectedEvent.canEditEvent", ng-click="deleteSelectedEvent()") Delete Event
           button.btn.btn-warning(ng-disabled="!selectedEvent.canEditEvent", ng-click="inviteUsers()") Invite Users
-
+    
+    script(type="text/ng-template" id="inviteUserModal.html" )
+      .modal-header
+        button.close(type='button', ng-click="cancel()") &times;
+      .modal-body
+        hello
 
     datalist(id="emails")
       option(ng-repeat="user in userList") {{ user.email }}
@@ -290,5 +296,5 @@ block content
     script(type='text/javascript', src='/js/ui-bootstrap-tpls.min.js')
     script(type='text/javascript', src='/js/date.js')
     script(type='text/javascript', src='/js/index.js')
-    script(type='text/javascript', src='/js/bottomAreaController.js')
+    script(type='text/javascript', src='/js/modalController.js')
     script(type='text/javascript', src='/js/sideBarController.js')
