--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -131,7 +131,7 @@ block content
               br
               select(ng-model="userGroupId", ng-options="group.name for group in userGroups")
               br
-              button.btn(ng-click="addUserGroupIdToRule()") Add User Group ID
+              button.btn(ng-click="addUserGroupToRule()") Add User Group
               ul
                 li(ng-repeat="userGroupId in newRule.userGroupIds") {{ userGroupId }}
               label User Email
@@ -283,8 +283,22 @@ block content
     script(type="text/ng-template" id="inviteUserModal.html" )
       .modal-header
         button.close(type='button', ng-click="cancel()") &times;
+        h4#myModalLabel.modal-title Invite Users to {{ selectedEvent.name }}
       .modal-body
-        hello
+        form(name="UserInvite")
+          input(type="text", ng-model="requestDetails.description", placeholder="Invite Description")
+          br
+          select(ng-model="selectedGroup", ng-options="group.name for group in userGroups")
+          br
+          button.btn(ng-click="addUserGroupToRequest()") Add User Group
+          ul
+            li(ng-repeat="userGroup in requestDetails.userGroups") {{ userGroup.name }}
+          input(type="text", ng-model="userEmail", list="emails")
+          button.btn(ng-click="addUserToRequest()") Add User
+          ul
+            li(ng-repeat="user in requestDetails.userList") {{ user }}
+        .btn-group
+          button.btn.btn-primary(ng-click="sendUserInvites()") Send Invites
 
     datalist(id="emails")
       option(ng-repeat="user in userList") {{ user.email }}
